--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "rustmarks"
-version = "0.1.0"
-edition = "2021"
+version = "0.1.1"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.152"
-serde_derive = "1.0.152"
-toml = "0.7.2"
+serde = { version = "1.0.228", features = ["aderive"] }
+toml = "0.9.8"
